sort.basic.lessons.sort.basic.insertion.AlgInsertionSort.scala.code
def insertionSort() {
val l= getNombreValeurs()
	for (i<-1 to l-1) {
		var v=getValeur(i)
		var j=i
		while(j>0 && getValeur(j-1)>v){
			copie(k,k+1);
			j=j-1
		}
		setValeur(j,v)

}
}
